--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -24,6 +24,7 @@ $blackLight: #26272d;
 $blackDark: #070e19;
 $steel: #3c4858;
 $steelDark: #1f2d3d;
+$silver: #8492A6;
 $white: #ffffff;
 $gray: #7f8c8d;
 $grayDark: #797b7d;
@@ -43,7 +44,7 @@ $yellowLight: #ffdd2d;
 $orange: #ea7f07;
 $orangeDark: darken(#ea7f07,9%);
 $brown: #c1a16b;
-$red: #d93663;
+$red: #d93663;// #ff283d, #d41208
 $redDark: darken(#d93663,9%);
 $pink: #ff7272;
 $violet: #5856d6;
