--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,6 +57,7 @@
 @import 'sections/mobile/screens/payment';
 @import 'sections/mobile/menu';
 @import 'sections/mobile/navbar';
+@import 'sections/mobile/tutorial/welcome';
 @import 'sections/profile/profile';
 
 // jqtest
