--- a/assets/templates/sections/likes/likesOffer.html
+++ b/assets/templates/sections/likes/likesOffer.html
@@ -1,4 +1,4 @@
-<likes-offer class="resume__like__empty { active ? 'display-block' : 'display-none' }" data-animate={ active }>
+<likes-offer class="resume__like__empty { 'display-none' : !active }" data-animate={ active }>
 
     <div class="resume__like__empty__text">Для получения лайков на ваши резюме нужен <strong class="c-blue">Premium</strong> аккаунт</div>
     <div onClick={ open.plan } onUpdate="none" class="btn btn-xxl btn-success btn-shadow mt25">Подключить</div>
