--- a/views/private.html
+++ b/views/private.html
@@ -100,7 +100,25 @@
     <script src="/assets/templates/ui/icons/social/icon-gl.tag" type="riot/tag"></script> -->
     <script src="/assets/js/templates.ui.js"></script>
     <script src="/assets/js/templates.sections.js"></script>
+    <script src="/assets/templates/ui/dropMenu.html" type="riot/tag"></script>
+    <script src="/assets/templates/modules/alert.html" type="riot/tag"></script>
+    <script src="/assets/templates/modules/loaderAjax.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/offers/welcome.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/offers/mobile/welcome.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/list/mobile/resumeList.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/list/mobile/navbar.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/list/mobile/resumeSection.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/stat/mobile/resumeStat.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/list/resumeNavbar.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/likes/likesList.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/inbox/mobile/inbox.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/inbox/inboxList.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/inbox/inboxListBlank.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/list/mobile/resumeItem.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/profile/mobile/profile.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/inbox/inbox.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/basic/section-content.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/list/resumeItem.html" type="riot/tag"></script>
 
     <!--/ JS components (commons) /-->
     <!-- <script src="/assets/js/components/commons/app.js"></script>
@@ -116,6 +134,7 @@
     <script src="/assets/js/components/i18n/i18n.js"></script>
     <script src="/assets/js/components/i18n/resume/basic/template/ru.js"></script> -->
     <script src="/assets/js/commons.js"></script>
+    <script src="/assets/js/components/commons/metrika.js"></script>
     <script src="/assets/js/components/fetch.js"></script>
     <script src="/assets/js/components/tutorial/welcome.js"></script>
     <script src="/assets/js/components/tutorial/resume/free/interface.js"></script>
@@ -139,11 +158,15 @@
     <script src="/assets/js/plugins/tutorial/resumeFree.js"></script> -->
     <script src="/assets/js/plugins.js"></script>
     <script src="/assets/js/plugins/sections.js"></script>
+    <script src="/assets/js/plugins/metrika.js"></script>
+    <script src="/assets/js/plugins/marquee.static.js"></script>
+    <script src="/assets/js/plugins/screens.js"></script>
 
     <!--/ JS components (store) /-->
     <script src="/assets/js/store/account.js"></script>
     <script src="/assets/js/store/data.js"></script>
     <script src="/assets/js/store/inbox.js"></script>
+    <script src="/assets/js/store/likes.js"></script>
     <script src="/assets/js/store/month.js"></script>
     <script src="/assets/js/store/paymentMethod.js"></script>
     <script src="/assets/js/store/paymentPeriod.js"></script>
