--- a/assets/css/ui/basic/_loaderAjax.scss
+++ b/assets/css/ui/basic/_loaderAjax.scss
@@ -5,14 +5,20 @@
     @extend .t-s;
     @extend .l0;
     @extend .ml-l;
-    @extend .xs-ml-m;
+    @extend .xs-ml-xs;
     @extend .opacity-0;
     @extend .willChange-opacity;
     @extend .zIndex-100;
 
+    .d-phone & {
+        width:28px;
+        height:28px;
+        @extend .bg-white;
+        @extend .borderRadius-circle;
+    }
     &[data-show="true"]{
         @extend .opacity-100;
-        transition:opacity 0s 0.1s;
+        transition:opacity 0s 0.2s;
 
         .loader-ajax-spinner {
             @extend .spinner-mini-anim;
