--- a/assets/templates/sections/list/resumeList.html
+++ b/assets/templates/sections/list/resumeList.html
@@ -2,7 +2,7 @@
 
     <div onClick={ open.profile } onUpdate="none" class="main__button" data-icon="menu" data-color="white"></div>
 
-    <div class="resume__list__title">Открыть меню</div>
+    <div class="resume__list__title">Открыть профиль</div>
 
     <resume-navbar></resume-navbar>
 
