--- a/assets/templates/sections/stat/mobile/resumeStat.html
+++ b/assets/templates/sections/stat/mobile/resumeStat.html
@@ -12,12 +12,14 @@
         <div name="content" class="section-scroll section__content">
             <div class="screenMobile__content resume__stat-m">
 
+                <div class="resume__stat-m__photo" style="background-image:url({ item.photo })"></div>
+
                 <div name="graph" class="resume__stat-m__graph">
                     <span></span>
                 </div>
 
                 <div onClick={ open.table } class="resume__stat-m__showTable">
-                    <div class="resume__stat-m__showTable__title">{ !state.showTable ? 'Показать таблицу просмотров' : 'Закрыть таблицу' }</div>
+                    <div class="resume__stat-m__showTable__title">{ !state.showTable ? 'Открыть таблицу просмотров' : 'Закрыть таблицу' }</div>
                 </div>
                 <div name="table" class="resume__stat-m__table" style="height:{ state.heightTable }px" data-show={ state.showTable }>
                     <table name="tableEl" class="table table-s">
